fix: Slider to be visible in summary

--- a/client/src/components/Allocation/AllocationRewardsBox/AllocationRewardsBox.module.scss
+++ b/client/src/components/Allocation/AllocationRewardsBox/AllocationRewardsBox.module.scss
@@ -49,7 +49,7 @@
 }
 
 .section {
-  &:not(.isDisabled) {
+  &:not(.isDisabled):not(.isLocked) {
     cursor: pointer;
   }
 
